# lab-pointcloud-tool

./: .clangd  .gitignore  CMakeLists.txt  README.md  Rotation-p1-check.sh  Rotation-p1.sh  Rotation-p2.sh  Rotation-p3.sh  Rotation-p4.sh  Rotation.sh  check_.txt  corresp_pixel_candidate.txt  hist-big_rectangle_box_front_side2.csv  hist-square_box_front_side5.csv  hist-square_box_front_side6.csv  hist-square_box_front_side8.csv  hist-square_box_front_side9.csv  nowall_closing_evaimg.csv  nowall_evaimg.csv  out-p1-120-hi.txt  out-p1-120-test.txt  out-p1-120.txt  out-p1-hi.txt  out-p1-hough-300-10.txt  out-p1-hough-500-10.txt  out-p1-houth-50-250-40.txt  out-p1-houth-50-250-40_.txt  out-p1-houth-seigein-2.txt  out-p1-houth-seigein.txt  out-p1-houth-seigen.txt  out-p1.txt  out-p2-120.txt  out-p2.txt  out-p3-120.txt  out-p3.txt  out-p4-120.txt  out-p4.txt  out-t.txt  out-transform-max300-10.txt  out-transform.txt  (+12 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.vim/: init_local.lua
arc/: hist-square_box_back_side0.csv  hist-square_box_back_side1.csv  hist-square_box_front_side3.csv  hist-square_box_front_side4.csv  hist-square_box_front_side7.csv
arx_ply_data/2-grid/: grid-t-020-r001d30.ply
arx_ply_data/2-grid-2/: grid-t-020-r001d30.ply  grid-t500.ply  pickup_ply.ply
arx_ply_data/capture_box/: bbox.ply  bbox_cube.ply  capture_cube.ply
arx_ply_data/capture_seg_kyoiku/: segmentation_point.ply
arx_ply_data/capture_segmentation/: capture.ply  capture_angle.ply
arx_ply_data/check_1124/: rotated-plyfile.ply  s10.ply  s10_load.ply  unit_spi.ply
arx_ply_data/check_1124_2/: check-img-correspondence.ply  check-ply-correspondence.ply  s10.ply
arx_ply_data/check_1124_3/: check-img-correspondence.ply  check-ply-correspondence.ply  corres.ply
arx_ply_data/check_1130/: pickup1.ply  pickup2.ply
arx_ply_data/cube-t230-r001d30/: img.ply  pickup_img.ply
arx_ply_data/cube5-t230-r001d30/: corresp_plypoint.ply  img.ply  pickup_img.ply
arx_ply_data/front-grid/: grid1-grid2-m-t005-r001d30.ply  grid1-rt.ply
arx_ply_data/front-grid-2/: grid1-grid2-m.ply  grid2-rt-r001d30.ply  pickup_ply.ply
arx_ply_data/grid-t-300-r001d30-3/: lidar.ply
arx_ply_data/grid-t-300-r001d30-4/: corresp_plypoint.ply  pickup_ply.ply
arx_ply_data/grid-t-300-r001d30-5/: img.ply  lidar.ply  pickup_img.ply  pickup_ply.ply
arx_ply_data/grid-t300-r001d30-1/: corresp_plypoint.ply  img.ply  lidar.ply  pickup_img.ply  scene.ply
arx_ply_data/grid-t300-r001d30-2/: img.ply  pickup_ply.ply
arx_ply_data/grid-t300-r001d30-3/: pickup_ply.ply
arx_ply_data/grid-t300-r001d30-4/: pickup_ply.ply
arx_ply_data/grid-t300-r001d30-5/: lidar.ply  pickup_img.ply  scene.ply
arx_ply_data/grid-t300-r001d30-6/: lidar.ply  pickup_img.ply
arx_ply_data/grid-t300-r001d30-7/: corresp_plypoint.ply  pickup_img.ply  pickup_ply.ply  scene.ply
arx_ply_data/grid-t300-r001d30-8/: pickup_ply.ply
arx_ply_data/grid-t5-31-r001d45-3/: img.ply  lidar.ply  pickup_img.ply  pickup_ply.ply
arx_ply_data/grid-t5-31-r001d45-4/: img.ply  lidar.ply  pickup_ply.ply
arx_ply_data/grid_front/: img.ply  scene.ply
arx_ply_data/grid_front_2/: lidar.ply
arx_ply_data/grid_front_3/: lidar.ply
arx_ply_data/grid_proj/: pickup_ply.ply
arx_ply_data/kyoiku-2/: rotated-ply-correspondence.ply
arx_ply_data/kyoiku-3/: line-img-origin-to-point.ply  line-ply-origin-to-point.ply  rotated-ply-correspondence.ply
arx_ply_data/kyoiku-4/: wrong-check-img-correspondence.ply
arx_ply_data/kyoiku-center/: check-ply.ply
arx_ply_data/less_grid/: s10-t005-r001-d30.ply
arx_ply_data/less_grid_2/: pickup_ply.ply  s10.ply
arx_ply_data/less_grid_3/: pickup_ply.ply
arx_ply_data/point_data2/: s100-r0_0_1-d30-n1.0.ply
arx_ply_data/trans_rotate/: s10-r001-d30-t220.ply  s10-t220-r001-d30.ply  s10-t500-r001-d30.ply
data/: PIC_point1.json  center_test.json  center_test2.json  detections.json  detections_test.json  plyfile.ply
data/20230711-bbox/: -.ply  big_rectangle_box_front_side-5.ply  check.ply  output_captured_point.ply  output_center_gravity.ply  square_box_back_side-11.ply  square_box_front_side-12.ply
data/cube/: capture_segmentation_point.ply  test_cube.ply
data/test/: capture_segmentation_point.ply  center_scene.ply  plycp.ply
img/: PIC_point3.jpg:Zone.Identifier
include/: calc_pointset.hpp  capture_point.hpp  img_proc.hpp  object_io.hpp  operation.hpp  pointset.hpp  viewer.hpp
make_test/: CMakeLists.txt
make_test/src/: hello.cpp
opencv/: CMakeLists.txt  eigen_test.cpp  main.cpp
ply_data/: eigen_test.cpp  object_IO.cpp  object_IO.hpp
ply_data/2-grid/: pickup_ply.ply
ply_data/capture_box/: capture.ply  scene.ply  scene_old.ply
ply_data/capture_seg_kyoiku/: capture_bbox_point.ply  capture_segmentation_point.ply  corresp-kyoiku.ply
ply_data/capture_segmentation/: capture.ply  scene.ply  seg_point.ply  seg_point_angle.ply
ply_data/check_1124/: s10.ply
ply_data/check_1124_2/: corres.ply  rotated-plyfile.ply
ply_data/check_1124_3/: rotated-plyfile.ply
ply_data/check_1130/: pickup.ply  pickup1_convert.ply  pickup1_im.ply  pickup2_transform_rotate.ply  pickup_im.ply  ply_transform_rotate.ply
ply_data/cube-t230-r001d30/: corresp_plypoint.ply  lidar.ply  pickup_ply.ply
ply_data/cube5-t230-r001d30/: lidar.ply  pickup_ply.ply
ply_data/front-grid/: pickup_ply.ply
ply_data/front-grid-2/: grid1-grid2-m-t550-r001d30.ply
ply_data/grid-t-300-r001d30-3/: corresp_plypoint.ply  pickup_ply.ply  scene.ply
ply_data/grid-t-300-r001d30-4/: lidar.ply  scene.ply
ply_data/grid-t-300-r001d30-5/: corresp_plypoint.ply
ply_data/grid-t300-r001d30-1/: pickup_ply.ply
ply_data/grid-t300-r001d30-2/: lidar.ply  (+3 more)
py_src/: convert_to_myformat.py
python/: convert_to_myformat.py  convert_to_myformat_yolact.py
src/: CMakeLists.txt  calc_pointset.cpp  calc_pointset.hpp  capture_boxpoint.cpp  capture_boxpoint.hpp  capture_point.cpp  img_proc.cpp  img_proc.hpp  log_test_location.cpp  main.cpp  main_old.cpp  object_io.cpp  object_io.hpp  operation.cpp  operation.hpp  pointset.cpp  pointset.hpp  viewer.cpp  viewer.hpp
(+64 files in other folders)
